# LokiAI

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  LICENSE  LokiPRD.md  Prompt.md  README.md  install.bat  main.py  pyproject.toml  pytest.ini  run-gpu.bat  run.bat  task.md
.claude/: settings.json
.claude/agents/: loki-dev.md
.claude/skills/: code-review.md
.github/workflows/: ci.yml
docs/: DEMO.md
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
graphify-out/obsidian-vault/: (text, page_count) Tuple Cache.md  .__init__().md  .__init__()_1.md  .__init__()_10.md  .__init__()_11.md  .__init__()_12.md  .__init__()_13.md  .__init__()_14.md  .__init__()_15.md  .__init__()_16.md  .__init__()_17.md  .__init__()_18.md  .__init__()_19.md  .__init__()_2.md  .__init__()_20.md  .__init__()_21.md  .__init__()_22.md  .__init__()_23.md  .__init__()_25.md  .__init__()_26.md  .__init__()_27.md  .__init__()_28.md  .__init__()_29.md  .__init__()_3.md  .__init__()_30.md  .__init__()_32.md  .__init__()_33.md  .__init__()_34.md  .__init__()_35.md  .__init__()_36.md  .__init__()_37.md  .__init__()_38.md  .__init__()_39.md  .__init__()_4.md  .__init__()_40.md  .__init__()_41.md  .__init__()_42.md  .__init__()_43.md  .__init__()_45.md  .__init__()_47.md  (+2160 more)
loki/: .env.example  __init__.py  config.yaml  requirements.txt
loki-ui/: .gitignore  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
loki-ui/app/: globals.css  layout.tsx  page.tsx
loki-ui/components/: ChatPanel.tsx  FilePanel.tsx  InputBar.tsx  InsightsPanel.tsx  MessageBubble.tsx  PersonalityPicker.tsx  PlasmaOrb.tsx  RuneCanvas.tsx  StatusOrb.tsx  VideoOrb.tsx
loki-ui/hooks/: useLoki.ts
loki-ui/lib/: format.test.ts  format.ts
loki/actions/: __init__.py  app_ctrl.py  browser_ctrl.py  computer_control.py  file_ops.py  shell_exec.py  system_ctrl.py
loki/core/: __init__.py  action_router.py  audit.py  bandit.py  brain.py  brain_memory.py  config_check.py  conversation_sm.py  listener.py  log_setup.py  log_utils.py  memory.py  outcome_log.py  paths.py  tts.py  (+5 more)
yuki/: config.yaml
(+74 files in other folders)
