[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "loki-assistant"
version = "1.0.0"
description = "Loki — Elite AI Desktop Assistant with Norse personality"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PRATHVI9607" }]
keywords = ["ai", "assistant", "voice", "desktop", "windows"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
]
dependencies = [
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.1",
    "sounddevice>=0.4.6",
    "webrtcvad-wheels>=2.0.10",
    "openai-whisper>=20231117",
    "edge-tts>=6.1.9",
    "pyttsx3>=2.90",
    "pygame>=2.5.2",
    "PyQt6>=6.6.0",
    "pycaw>=20231129",
    "screen-brightness-control>=0.22.0",
    "psutil>=5.9.8",
    "pywin32>=306",
    "pyperclip>=1.8.2",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    "PyMuPDF>=1.23.0",
    "gitpython>=3.1.40",
    "cryptography>=41.0.0",
    "watchdog>=3.0.0",
    "numpy>=1.24.0",
    "torch>=2.1.0",
]

[project.scripts]
loki = "main:main"

[project.urls]
Homepage = "https://github.com/PRATHVI9607/LokiAI"
Repository = "https://github.com/PRATHVI9607/LokiAI"
Issues = "https://github.com/PRATHVI9607/LokiAI/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["loki*"]

[tool.pytest.ini_options]
testpaths = ["loki/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
